--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<!DOCTYPE html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1"name=viewport><meta content=" FILL ME IN "name=description><meta content=" FILL ME IN "name=author><title>Cameron Pittman: Portfolio</title><link href=css/style.css rel=stylesheet><link href=css/print.css rel=stylesheet media=print><script>!function(e,n){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date}(window,"ga"),ga("create","UA-XXXX-Y"),ga("send","pageview")</script><header><a href=/ ><img src=img/profilepic.jpg></a><p>Cameron Pittman<br><span>Course Developer</span></header><div class=container><div class=hero><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)<br>Contact me: me@email.com</div><div class=content><ul><li><img src=img/own2048.jpg> <a href=project-2048.html>Build Your Own 2048!</a><p>I made my own version of 2048. How cool is that!?<li><img src=img/web-opt.jpg> <a href=project-webperf.html>Website Performance Optimization</a><p>Hey... this class looks familiar.<li><img src=img/mob-opt.jpg> <a href=project-mobile.html>Mobile Web Development</a><p>Making mobile apps isn't so hard after all.<li><img src=views/images/pizzeria.jpg style=width:100px> <a href=views/pizza.html>Cam's Pizzeria</a><p>Who wants a performant pizza?</ul></div><footer><p>© Web Performance 2014 <span id=crp-stats></span></footer></div><script src=http://www.google-analytics.com/analytics.js async></script><script src=js/perfmatters.js async></script><script src=https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js></script><script>WebFont.load({google:{families:["Open Sans:400,700"]}})</script>
+<!DOCTYPE html>
+<html lang=en>
+<head>
+	<meta charset=utf-8>
+	<meta content="width=device-width,initial-scale=1" name=viewport>
+	<meta content=" FILL ME IN " name=description>
+	<meta content=" FILL ME IN " name=author>
+	<title>Cameron Pittman: Portfolio</title>
+	<link href=css/style.css rel=stylesheet>
+	<link href=css/print.css rel=stylesheet media=print>
+</head>
+<body>
+<header>
+	<a href=/><img src=img/profilepic.jpg></a>
+    <p>Cameron Pittman
+        <br><span>Course Developer</span></p></header>
+<div class=container>
+    <div class=hero><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)
+        <br>Contact me: me@email.com</div>
+    <div class=content>
+        <ul>
+            <li><img src=img/own2048.jpg> <a href=project-2048.html>Build Your Own 2048!</a>
+                <p>I made my own version of 2048. How cool is that!?</p></li>
+                    <li><img src=img/web-opt.jpg> <a href=project-webperf.html>Website Performance Optimization</a>
+                        <p>Hey... this class looks familiar.</p></li>
+                            <li><img src=img/mob-opt.jpg> <a href=project-mobile.html>Mobile Web Development</a>
+                                <p>Making mobile apps isn't so hard after all.</p></li>
+                                    <li><img src=views/images/pizzeria.jpg style=width:100px> <a href=views/pizza.html>Cam's Pizzeria</a>
+                                        <p>Who wants a performant pizza?</p></li>
+        </ul>
+    </div>
+    <footer>
+        <p>© Web Performance 2014 <span id=crp-stats></span></p>
+    </footer>
+</div>
+
+<script src=http://www.google-analytics.com/analytics.js async></script>
+<script src=js/perfmatters.js async></script>
+<script src=https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js></script>
+<script>
+    WebFont.load({
+        google: {
+            families: ["Open Sans:400,700"]
+        }
+    })
+</script>
+<script>
+    function(e, n) {
+        e.GoogleAnalyticsObject = n, e[n] = e[n] || function() {
+            (e[n].q = e[n].q || []).push(arguments)
+        }, e[n].l = 1 * new Date
+    }(window, "ga"), ga("create", "UA-XXXX-Y"), ga("send", "pageview")
+</script>
+</body>
+</html>
