--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <p>Hey... this class looks familiar.</p></li>
                             <li><img src=img/mob-opt.jpg> <a href=project-mobile.html>Mobile Web Development</a>
                                 <p>Making mobile apps isn't so hard after all.</p></li>
-                                    <li><img src=views/images/pizzeria.jpg style=width:100px> <a href=views/pizza.html>Cam's Pizzeria</a>
+                                    <li><img src=img/pizzeria.jpg style=width:100px> <a href=views/pizza.html>Cam's Pizzeria</a>
                                         <p>Who wants a performant pizza?</p></li>
         </ul>
     </div>
